# oomi-influx

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: _checks.yml  ci-checks.yml  ci-publish.yml  ci.yml  publish.yml
openspec/: config.yaml
openspec/changes/archive/2026-05-14-auth-and-fetch/: design.md
openspec/changes/archive/2026-05-14-auth-and-fetch/specs/consumption-fetch/: spec.md
openspec/changes/archive/2026-05-14-write-to-influx/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-14-write-to-influx/specs/influx-write/: spec.md
openspec/changes/archive/2026-05-15-ci-release-pypi/: proposal.md
openspec/changes/archive/2026-05-15-ci-release-pypi/specs/release-skill/: spec.md
openspec/changes/auth-and-fetch/: README.md  design.md  proposal.md  tasks.md
openspec/changes/auth-and-fetch/specs/auth/: spec.md
openspec/changes/auth-and-fetch/specs/consumption-fetch/: spec.md
openspec/changes/ci-release-pypi/: design.md  tasks.md
openspec/changes/ci-release-pypi/specs/dynamic-versioning/: spec.md
openspec/changes/ci-release-pypi/specs/pypi-publish/: spec.md
openspec/proposals/: 001-auth-and-fetch.md
openspec/specs/auth/: spec.md
openspec/specs/consumption-fetch/: spec.md
openspec/specs/dynamic-versioning/: spec.md
openspec/specs/influx-write/: spec.md
openspec/specs/pypi-publish/: spec.md
openspec/specs/release-skill/: spec.md
src/oomi_influx/: __init__.py  _aura.py  auth.py  cli.py  client.py  config.py  fetch.py  influx.py  models.py  session.py
tests/: conftest.py  test_auth.py  test_cli.py  test_client.py  test_fetch.py  test_influx_logging.py  test_influx_write.py  test_integration.py  test_session.py
