[project]
name = "oomi-influx"
version = "0.1.0"
description = "ETL ingestion of Oomi energy data into InfluxDB"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.27",
    "typer>=0.12",
    "python-dotenv>=1.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
]

[project.scripts]
oomi-influx = "oomi_influx.cli:app"

[dependency-groups]
dev = [
    "ruff>=0.4",
    "ty>=0.0.1a10",
    "pytest>=8",
    "pytest-httpx>=0.30",
]

[build-system]
requires = ["uv_build>=0.10.12,<0.11.0"]
build-backend = "uv_build"
