[project]
name = "oomi-influx"
dynamic = ["version"]
description = "ETL ingestion of Oomi energy data into InfluxDB"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
authors = [
    { name = "Jaakko Vuori", email = "jaakko.vuori@gmail.com" },
]
urls.Homepage = "https://github.com/jvuori/oomi-influx"
urls.Repository = "https://github.com/jvuori/oomi-influx"
urls.Issues = "https://github.com/jvuori/oomi-influx/issues"
dependencies = [
    "httpx>=0.27",
    "typer>=0.12",
    "python-dotenv>=1.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "influxdb-client>=1.50.0",
]

[project.scripts]
oomi-influx = "oomi_influx.cli:app"

[dependency-groups]
dev = [
    "ruff>=0.4",
    "ty>=0.0.1a10",
    "pytest>=8",
    "pytest-httpx>=0.30",
    "testcontainers>=4.14.2",
]

[tool.pytest.ini_options]
addopts = "-m 'not integration'"
markers = [
    "integration: tests against live external services (Oomi or InfluxDB); requires credentials and/or Docker",
]

[tool.hatch.version]
source = "vcs"

[build-system]
requires = ["hatchling>=1.25", "hatch-vcs>=0.4"]
build-backend = "hatchling.build"
